--- a/src/Detail/Detail.css
+++ b/src/Detail/Detail.css
@@ -1,35 +1,30 @@
 .search {
-  position: relative;
-  right: 24px;
+  border-radius: 20px;
+  width: 90%;
+  height: 48px;
+  background-color: white;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 90% 10%;
+  padding: 3px 20px;
 }
 
 .search input {
-  width: 90%;
-  height: 48px;
-  /* border-radius: 20px; */
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-  margin-bottom: 15px;
-  padding: 0 10px;
+  width: 100%;
   font-size: 0.5em;
   font-weight: bold;
   outline: none;
   border: none;
+  background-color: none;
 }
 
 .search button {
-  position: absolute;
-  height: 48px;
+  width: 100%;
   background-color: white;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  padding: 0 10px;
   font-size: 0.7em;
   font-weight: bold;
   outline: none;
   border: none;
-  top: 0px;
-  margin: 0;
 }
 
 .stitle {
@@ -37,7 +32,7 @@
 }
 
 @media screen and (max-width: 840px) {
-  .search input {
+  /* .search input {
     width: 70%;
-  }
+  } */
 }
