--- a/src/List/MovieList.css
+++ b/src/List/MovieList.css
@@ -28,6 +28,7 @@
 @media screen and (max-width: 840px) {
   .movies {
     margin: 0 auto;
+    margin-bottom: 60px;
     grid-template-columns: repeat(1, 1fr);
     grid-row-gap: 30px;
   }
